@@ -96,7 +96,7 @@ EXPORTS
     file_to_out                      @91
     is_nt_service                    @92
     set_nt_exit_event                @93
-    print_type2list                  @94
+    prepare_type2list                @94
     NYMSECRING                       @95
     pgp_dearmor                      @96
     pgp_armor                        @97
